--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
    <nav class="navbar navbar-expand-lg fixed-top" id="mainNavbar">
       <div class="container">
          <a class="navbar-brand" href="#">
-            <span class="brand-name">
-               <svg class="brand-icon" width="28" height="28" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" style="vertical-align:middle;margin-right:6px;"><circle cx="16" cy="16" r="15" stroke="url(#grad1)" stroke-width="2" fill="none"/><text x="50%" y="57%" text-anchor="middle" fill="url(#grad1)" font-size="16" font-family="Inter, sans-serif" font-weight="bold" dy=".3em">S</text><defs><linearGradient id="grad1" x1="0" y1="0" x2="1" y2="1"><stop offset="0%" stop-color="#2563eb"/><stop offset="100%" stop-color="#00b894"/></linearGradient></defs></svg>
-               Surenjanath Singh
-            </span>
+            <span class="brand-name">Surenjanath Singh</span>
          </a>
          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
@@ -50,16 +47,15 @@
                   <a class="nav-link" href="#contact">Contact</a>
                </li>
             </ul>
-            <a href="resume/SurenjanathSingh_Resume_20250402.pdf" class="cta-btn ms-3" download><i class="bi bi-download" style="margin-right:6px;"></i>Download Resume</a>
+            <a href="resume/SurenjanathSingh_Resume_20250402.pdf" class="cta-btn ms-3" download>
+               <i class="bi bi-download me-2"></i>Download Resume
+            </a>
          </div>
       </div>
    </nav>
 
    <!-- Hero Section -->
    <section class="banner__section" id="home">
-      <div class="hero-bg-blob" style="position:absolute;top:-80px;left:-80px;z-index:0;width:600px;height:600px;pointer-events:none;">
-         <svg viewBox="0 0 600 600"><defs><radialGradient id="heroBlobGrad" cx="50%" cy="50%" r="50%"><stop offset="0%" stop-color="#2563eb"/><stop offset="100%" stop-color="#00b894" stop-opacity="0.2"/></radialGradient></defs><ellipse cx="300" cy="300" rx="300" ry="220" fill="url(#heroBlobGrad)"><animate attributeName="rx" values="300;260;300" dur="6s" repeatCount="indefinite"/><animate attributeName="ry" values="220;260;220" dur="7s" repeatCount="indefinite"/></ellipse></svg>
-      </div>
       <div class="container">
          <div class="row g-4">
             <div class="col-lg-8">
@@ -84,7 +80,9 @@
                      </a>
                      <span class="proces">View Projects</span>
                   </div>
-                  <a href="resume/SurenjanathSingh_Resume_20250402.pdf" class="btn btn-primary mt-4" download><i class="bi bi-download" style="margin-right:6px;"></i>View Resume</a>
+                  <a href="resume/SurenjanathSingh_Resume_20250402.pdf" class="btn btn-primary mt-4" download>
+                     <i class="bi bi-download me-2"></i>View Resume
+                  </a>
                </div>
             </div>
          </div>
@@ -119,9 +117,6 @@
       </div>
    </section>
 
-   <!-- Section Divider -->
-   <div style="width:100%;overflow:hidden;line-height:0;"><svg viewBox="0 0 1200 60" preserveAspectRatio="none" style="display:block;width:100%;height:60px;"><path d="M0,0 C300,60 900,0 1200,60 L1200,0 L0,0 Z" fill="url(#grad1)" opacity="0.12"></path></svg></div>
-
    <!-- About Section -->
    <section class="about__section py-5" id="about">
       <div class="container">
@@ -149,7 +144,7 @@
             </div>
             <div class="col-lg-6">
                <div class="about__image">
-                  <img src="assets/img/about/about-img.jpg" alt="About Surenjanath Singh" class="img-fluid rounded" loading="lazy">
+                  <img src="https://images.pexels.com/photos/3861958/pexels-photo-3861958.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="About Surenjanath Singh" class="img-fluid rounded" loading="lazy">
                </div>
             </div>
          </div>
@@ -243,7 +238,7 @@
          <div class="row g-4">
             <div class="col-lg-6">
                <div class="project__card">
-                  <img src="https://images.unsplash.com/photo-1611974789855-9c2a0a7236a3?w=800&auto=format&fit=crop&q=60" alt="Stock Exchange Scraper" class="img-fluid" loading="lazy">
+                  <img src="https://images.pexels.com/photos/7567434/pexels-photo-7567434.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Stock Exchange Scraper" class="img-fluid" loading="lazy">
                   <div class="project__content">
                      <h3>Stock Exchange Scraper</h3>
                      <p>Web scraping pipeline collecting and updating data daily across 61 securities using Python, Requests, and Pandas.</p>
@@ -260,7 +255,7 @@
             </div>
             <div class="col-lg-6">
                <div class="project__card">
-                  <img src="https://images.unsplash.com/photo-1494412574643-ff11b0a5c1c3?w=800&auto=format&fit=crop&q=60" alt="Maritime Ports DB Builder" class="img-fluid" loading="lazy">
+                  <img src="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Maritime Ports DB Builder" class="img-fluid" loading="lazy">
                   <div class="project__content">
                      <h3>Maritime Ports DB Builder</h3>
                      <p>Ethical scraper creating a comprehensive SQLite database of maritime ports using SQLAlchemy.</p>
@@ -285,10 +280,11 @@
          <h2 class="section__title text-center mb-5">Get In Touch</h2>
          <div class="row justify-content-center">
             <div class="col-lg-8">
-               <div class="contact__form d-flex" style="position:relative;">
-                  <div style="width:8px;background:linear-gradient(180deg,#2563eb,#00b894);border-radius:8px 0 0 8px;margin-right:1.5rem;"></div>
-                  <form id="contactForm" action="https://formspree.io/f/xyzwlryp" method="POST" style="flex:1;">
-                     <div id="formSuccess" class="form-success" style="display:none;">Thank you! Your message has been sent. I will get back to you soon.</div>
+               <div class="contact__form">
+                  <form id="contactForm" action="https://formspree.io/f/xyzwlryp" method="POST">
+                     <div id="formSuccess" class="form-success" style="display:none;">
+                        Thank you! Your message has been sent. I will get back to you soon.
+                     </div>
                      <div class="row g-4">
                         <div class="col-md-6">
                            <div class="form-group">
@@ -325,17 +321,6 @@
       </div>
    </section>
 
-   <!-- Back to Top Button -->
-   <a href="#home" class="progress-wrap" id="backToTop" style="display:block;position:fixed;right:30px;bottom:30px;z-index:9999;">
-      <svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
-         <path fill="var(--base)" d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98"/>
-      </svg>
-      <i class="bi bi-arrow-90deg-up title topping"></i>
-   </a>
-
-   <!-- Section Divider -->
-   <div style="width:100%;overflow:hidden;line-height:0;"><svg viewBox="0 0 1200 60" preserveAspectRatio="none" style="display:block;width:100%;height:60px;"><path d="M0,60 C300,0 900,60 1200,0 L1200,60 L0,60 Z" fill="url(#grad1)" opacity="0.12"></path></svg></div>
-
    <!-- Footer -->
    <footer class="footer py-4">
       <div class="container">
@@ -345,9 +330,21 @@
             </div>
             <div class="col-lg-6">
                <ul class="footer__social d-flex justify-content-lg-end gap-3 mb-0">
-                  <li><a href="https://linkedin.com/in/surenjanath" target="_blank"><i class="bi bi-linkedin"></i></a></li>
-                  <li><a href="https://github.com/surenjanath" target="_blank"><i class="bi bi-github"></i></a></li>
-                  <li><a href="https://surenjanath.medium.com" target="_blank"><i class="bi bi-medium"></i></a></li>
+                  <li>
+                     <a href="https://linkedin.com/in/surenjanath" target="_blank">
+                        <i class="bi bi-linkedin"></i>
+                     </a>
+                  </li>
+                  <li>
+                     <a href="https://github.com/surenjanath" target="_blank">
+                        <i class="bi bi-github"></i>
+                     </a>
+                  </li>
+                  <li>
+                     <a href="https://surenjanath.medium.com" target="_blank">
+                        <i class="bi bi-medium"></i>
+                     </a>
+                  </li>
                </ul>
             </div>
          </div>
@@ -365,18 +362,24 @@
    <script src="assets/js/odometer.min.js"></script>
    <script src="assets/js/wow.min.js"></script>
    <script src="assets/js/main.js"></script>
+
    <script>
    document.addEventListener('DOMContentLoaded', function() {
+     // Form handling
      var form = document.getElementById('contactForm');
      var successMsg = document.getElementById('formSuccess');
+     
      if(form) {
        form.addEventListener('submit', function(e) {
          e.preventDefault();
          var formData = new FormData(form);
+         
          fetch(form.action, {
            method: 'POST',
            body: formData,
-           headers: { 'Accept': 'application/json' }
+           headers: {
+             'Accept': 'application/json'
+           }
          }).then(function(response) {
            if (response.ok) {
              form.reset();
@@ -393,6 +396,29 @@
          });
        });
      }
+
+     // Scroll animations
+     const observer = new IntersectionObserver((entries) => {
+       entries.forEach(entry => {
+         if (entry.isIntersecting) {
+           entry.target.classList.add('visible');
+         }
+       });
+     }, {
+       threshold: 0.1
+     });
+
+     document.querySelectorAll('.section__title, .skill__category, .project__card').forEach((el) => observer.observe(el));
+
+     // Navbar scroll
+     window.addEventListener('scroll', function() {
+       const navbar = document.querySelector('.navbar');
+       if (window.scrollY > 50) {
+         navbar.classList.add('scrolled');
+       } else {
+         navbar.classList.remove('scrolled');
+       }
+     });
    });
    </script>
 </body>
