--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>S.Singh [Systems Architect] // C-Node 816001010</title>
+    <title>S.Singh [Systems Architect] // C-Node #26639980</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -113,7 +113,7 @@
             <!-- Hero Panel -->
             <div class="col-span-12 md:col-span-8 panel">
                 <p class="panel-title">// PRIMARY_OBJECTIVE</p>
-                <h2 class="text-3xl md:text-5xl font-black leading-tight text-white">I don't just solve problems—I build the permanent, automated systems that make them disappear.</h2>
+                <h2 class="text-3xl md:text-5xl font-black leading-tight text-white">I don't just solve problems - I build the permanent, automated systems that make them disappear.</h2>
             </div>
             
             <!-- Stats Panel -->
@@ -139,7 +139,7 @@
             <div class="col-span-12 md:col-span-7 panel">
                 <p class="panel-title">// ANALYSIS_01: ORIGIN_PROTOCOL</p>
                 <div class="space-y-4 text-gray-300">
-                    <p>My entire technical toolkit—from Python and SQL to full-stack web development—is <span class="text-[var(--accent-color)] font-bold">self-taught</span>, a protocol initiated by a drive to fix what was broken and build what was missing.</p>
+                    <p>My entire technical toolkit - from Python and SQL to full-stack web development—is <span class="text-[var(--accent-color)] font-bold">self-taught</span>, a protocol initiated by a drive to fix what was broken and build what was missing.</p>
                     <p>At Gulf Insurance, I didn't just execute tasks; I identified critical inefficiencies and independently architected the solutions. This experience proved that true innovation originates from a deep analysis of the business problem.</p>
                 </div>
             </div>
@@ -194,11 +194,11 @@
                 <div class="grid md:grid-cols-2 gap-8">
                     <div>
                         <p class="mono text-xs text-gray-400">2023 - PRESENT</p>
-                        <h3 class="font-bold text-lg text-white">DATA ENGINEER @ ASSURIA</h3>
+                        <h3 class="font-bold text-lg text-white">PROJECT OFFICER @ GULF INSURANCE</h3>
                         <ul class="text-sm text-gray-300 mt-2 detail-list">
                             <li>Architected automation for complex CBTT regulatory reports, integrating data from 15 territories.</li>
-                            <li>Engineered a full-stack Marine Insurance Underwriting Portal to replace a manual workflow.</li>
-                            <li>Designed and deployed a Bank Reconciliation Portal with an advanced matching algorithm.</li>
+                            <li>Engineered a full-stacks Portals to help mitigate manual errors and reduce a manual workflow.</li>
+                            <li>Designed and deployed a Bank Reconciliation Portal with an sophisticated matching algorithm.</li>
                         </ul>
                     </div>
                      <div>
@@ -227,10 +227,10 @@
                     </a>
                      <a href="#" class="block p-4 project-link">
                         <div class="flex justify-between items-center">
-                            <h3 class="font-bold text-lg mono text-white">'GEM' Enterprise System</h3>
+                            <h3 class="font-bold text-lg mono text-white">Cashpot Data Pipelines and Mobile App</h3>
                              <span class="text-xs mono text-[var(--accent-color)]"> CASE_STUDY &rarr; </span>
                         </div>
-                         <p class="text-sm text-gray-400 mt-1">Complete insurance policy management system using Python and Django, featuring a core automation engine and a RESTful API.</p>
+                         <p class="text-sm text-gray-400 mt-1">Automated data pipelines and mobile app for cashpot data collection.</p>
                     </a>
                      <a href="#" class="block p-4 project-link">
                         <div class="flex justify-between items-center">
