--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>S.Singh [Systems Architect] // C-Node #26639980</title>
+    <title>S.Singh [Systems Architect] // C-Node #2639980</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -104,9 +104,14 @@
                 <div class="flex justify-between items-center">
                     <div class="mono">
                         <h1 class="text-lg font-bold text-white tracking-widest">// SURENJANATH.SINGH</h1>
-                        <p class="text-xs text-[var(--accent-color)]">> STATUS: ARCHITECT // SESSION_ACTIVE</p>
+                        <p class="text-xs text-[var(--accent-color)]">&gt; STATUS: ARCHITECT // SESSION_ACTIVE</p>
                     </div>
-                    <div class="data-stream" id="data-stream-header"></div>
+                    <div class="flex items-center space-x-4">
+                        <a href="/resume/SurenjanathSingh_Resume%20250815.pdf" download class="inline-block px-4 py-2 rounded bg-[var(--accent-color)] text-black font-bold shadow hover:bg-white transition-colors duration-200 mono text-xs">
+                            Download Resume
+                        </a>
+                        <div class="data-stream" id="data-stream-header"></div>
+                    </div>
                 </div>
             </header>
 
